# CartoSymTranscoder

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  cleanup.sh  pyproject.toml  setup.sh
antlr/: CartoSymCSSGrammar.py  CartoSymCSSGrammarListener.py  main.py  parser.py  sld_to_cscss.py
antlr/.antlr/: CartoSymCSSGrammar.interp  CartoSymCSSGrammar.java  CartoSymCSSGrammarBaseListener.java  CartoSymCSSLexer.java
antlr/grammars/: CartoSymCSSGrammar.g4  CartoSymCSSLexer.g4
antlr/grammars/.antlr/: CartoSymCSSGrammar.interp  CartoSymCSSGrammar.java  CartoSymCSSGrammar.tokens  CartoSymCSSLexer.interp  CartoSymCSSLexer.java
antlr/src/: CartoSymCSSGrammar.py  CartoSymCSSGrammarListener.py  CartoSymCSSLexer.py  CartoSymParser.py  StylingRule.py  Symbolizer.py  converter.py  main.py  parser.py
antlr/src/CartoSym/expressions/: Arguments.py  ArrayElements.py  ExpArray.py  ExpCall.py  ExpConstant.py  ExpString.py  Expression.py  IdOrConstant.py  IdentifierExpression.py  SystemIdentifierExpression.py  Tuple.py  Visualization.py
antlr/src/CartoSym/highLevel/: Metadata.py  Selector.py  StyleSheet.py  StylingRule.py  StylingRuleList.py
antlr/src/CartoSym/operators/: ArithmeticOperatorAdd.py  ArithmeticOperatorExp.py  ArithmeticOperatorMul.py  UnaryArithmeticOperator.py  UnaryLogicalOperator.py
antlr/src/CartoSym/propertyAssignments/: PropertyAssignment.py  PropertyAssignmentInferred.py  PropertyAssignmentInferredList.py  PropertyAssignmentList.py
antlr/src/parser_classes/: Metadata.py  Selector.py
antlr/src/parser_classes/expressions/: ExpInstance.py  Expression.py  Tuple.py
antlr/src/parser_classes/operators/: BetweenOperator.py  BinaryLogicalOperator.py  RelationalOperator.py
antlr/src/parser_classes/propertyAssignments/: PropertyAssignmentInferredList.py
cartosym_transcoder/: __init__.py  ast.py  ast_converter.py  cli.py  converter.py  expression_parser.py  parser.py
cartosym_transcoder/codecs/: __init__.py  base.py
cartosym_transcoder/codecs/cscss/: __init__.py  reader.py  writer.py
cartosym_transcoder/codecs/csjson/: __init__.py  reader.py  writer.py
cartosym_transcoder/codecs/maplibre/: __init__.py  reader.py  writer.py
cartosym_transcoder/codecs/sld_se/: __init__.py  reader.py  writer.py
cartosym_transcoder/expressions/: __init__.py  cql2_json.py  cql2_text.py  model.py
cartosym_transcoder/models/: __init__.py  base.py  de9im.py  expressions.py  graphics.py  styles.py  symbolizers.py  types.py
cartosym_transcoder/schemas/: CartoSym-JSON.schema.json
examples/: 0-basic.cscss  1-core.cs.json  1-core.cscss  5-coverage-dem.cs.json  7-coverage-ndvi.cs.json  8-coverage-hillshading.cs.json
examples/input/: 1-core.cscss  6-coverage-sentinel2.cs.json  9-coverage-hillshading-opacity.cs.json
examples/output/: 1-core.json  style_example.qml
input/: 0-basic.cs.json  0-basic.cscss  1-core.cscss  12-include.cscss  2-vector-polygon.cs.json  4-vector-point.cscss  example-functional.cs.json  lightbasemap-v0.cscss  lightbasemap.cscss
output/: 0-basic.cs.json  0-basic.cscss  2-vector-polygon.cs.json
parser/: qml_parser.py  sld_parser.py
schemas/: CartoSym-JSON.schema.json  CartoSymCSSLexer.py  antlr-to-json.py  cscss-2-csjson.py  cscss-se-mapping.json  json_validation.py  main.py  xsd_to_json_converter.py
schemas/.antlr/: CartoSymCSSGrammar.java  CartoSymCSSGrammarListener.java  CartoSymCSSLexer.java
schemas/output/: FeatureStyle.json  Symbolizer.json
tests/: __init__.py  test_alter.py  test_cql2_expressions.py  test_cql2_parser.py  test_de9im.py  test_include.py  test_marker_antlr.py  test_roundtrip.py  test_variable_and_stylingrulename.py
