[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartosym-transcoder"
version = "0.1.0"
authors = [
    {name = "Maxime Collombin", email = "maxime.collombin@example.com"},
]
description = "Lossless transcoding between CartoSym CSS and other encodings for OGC Style & Symbology"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["gis", "cartography", "symbology", "ogc", "sld", "cartosym"]
dependencies = [
    "antlr4-python3-runtime>=4.13.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "antlr4-tools>=0.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "flake8",
    "mypy",
]
sld = [
    "lxml>=4.9.0",
]
maplibre = []
cql2 = [
    "pygeofilter>=0.2.0",
]
all = [
    "cartosym-transcoder[dev,sld,cql2]",
]

[project.urls]
Homepage = "https://github.com/maxcollombin/CartoSymTranscoder"
Documentation = "https://github.com/maxcollombin/CartoSymTranscoder/blob/main/README.md"
Repository = "https://github.com/maxcollombin/CartoSymTranscoder.git"
Issues = "https://github.com/maxcollombin/CartoSymTranscoder/issues"

[project.scripts]
cartosym = "cartosym_transcoder.cli:main"

[tool.setuptools]
packages = [
    "cartosym_transcoder",
    "cartosym_transcoder.models",
    "cartosym_transcoder.grammar",
    "cartosym_transcoder.grammar.generated",
    "cartosym_transcoder.codecs",
    "cartosym_transcoder.codecs.cscss",
    "cartosym_transcoder.codecs.csjson",
    "cartosym_transcoder.codecs.sld_se",
    "cartosym_transcoder.codecs.maplibre",
    "cartosym_transcoder.expressions",
]
include-package-data = true

[tool.setuptools.package-data]
cartosym_transcoder = ["*.md", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
